syntax = "proto3";
package counter;

import "google/protobuf/wrappers.proto";

service Counter {
    rpc Incr(google.protobuf.Int64Value) returns (google.protobuf.Int64Value);
    rpc Increment (CounterRequest) returns (CounterReply);
    rpc Bincrement (BigInt) returns (BigInt);
}

message CounterRequest {
   int64 value = 1;
}

message CounterReply {
    int64 value = 1;
}

enum Sign {
    NoSign = 0;
    PLUS = 1;
    MINUS = -1;
}
message BigInt {
    Sign sign = 1;
    bytes repr = 2;
}
